MDEV-22100 TokuDB compilation error

fix TokuDB to compile with the perfschema